@@ -865,7 +865,8 @@ Zena.toggle = function(elem, definition, id) {
       onSuccess: function() {
         definition['list'] = definition['list'].without(id);
         Zena.set_toggle(elem.id, definition);
-      }
+        if (definition['js']) definition['js']();
+      }  
     });
   } else {
     // turn on
@@ -889,6 +890,7 @@ Zena.toggle = function(elem, definition, id) {
         }
         definition['list'].push(id);
         Zena.set_toggle(elem.id, definition);
+        if (definition['js']) definition['js']();
       }
     });
   }
