@@ -1,6 +1,8 @@
 open "/oo/testnode37.html?test=toggle1"
 assert_element_not_present "css=ul.references > li"
 
+wait_for_element_present 'css=#toggle12_19.toggle.off > input.cb'
+
 # Add relation
 # Cannot test click on non-link in Safari and Chrome...
 click 'css=#toggle12_19.toggle.off > input.cb'
